修复 分类查找 标签查找bug

--- a/template/blog/layout/right.html
+++ b/template/blog/layout/right.html
@@ -47,7 +47,7 @@
 			  </div>
 		  </div>
 
-		  {{range $index,$elem :=.Data}}
+		  {{range $index,$elem :=.Right.HotArticles}}
 		  <div class="layui-card" >
 			<div class="layui-card-body">
 				<div class="layui-row">
