--- a/template/blog/detailsTag.html
+++ b/template/blog/detailsTag.html
@@ -22,7 +22,7 @@
 
 
 <!-- 中间画布 -->
-<div class="site-banner" style="background:url( https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimg.jj20.com%2Fup%2Fallimg%2Ftp09%2F210Q6133S9A22-0-lp.jpg&refer=http%3A%2F%2Fimg.jj20.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1664546680&t=2f3e57bd908f1d26a8aeca37169b9245) no-repeat;  background-size:100% 100%; height: 400px;">
+<div class="site-banner" style="background:url({{.PagePhoto}}) no-repeat;  background-size:100% 100%; height: 400px;">
 	<div class="site-banner-bg">
 	</div>
 	<div class="site-banner-main">
