修复标签显示

--- a/template/blog/layout/right.html
+++ b/template/blog/layout/right.html
@@ -116,7 +116,7 @@
 		<div class="layui-row">
 			{{range $index,$elem :=.Tags}}
 				<div class="layui-col-md3" style="padding: 10px;">
-					<a href="/detailTag?tag={{$elem.Name}}"  class="layui-btn layui-btn-primary layui-btn-radius">{{$elem.Name}}</a>	
+					<a href="/detailTag?tag={{$elem}}"  class="layui-btn layui-btn-primary layui-btn-radius">{{$elem}}</a>	
 				</div>
 
 			{{end}}
