--- a/template/blog/layout/right.html
+++ b/template/blog/layout/right.html
@@ -81,7 +81,7 @@
 	
 		<div class="layui-col-md4 layui-anim layui-anim-scaleSpring" style="margin-top: 15px;">
 			<a href="blog?id=<%item.id%>" title="<%item.title%>">
-				<img src="<%item.photo%>" width="100%" height="100%"/>
+				<img src="<%item.photo%>" width="100%" height="183px"/>
 			</a>
 		</div>
 		<div class="layui-col-md8" >
