--- a/template/blog/404.html
+++ b/template/blog/404.html
@@ -66,7 +66,7 @@
                     <span class="triangle"></span>
                 </div>
             </div>
-            <h2 class="h1">该功能正在开发中..... <span id="time">3</span>秒后跳回主页</h2>
+            <h2 class="h1">{{.Msg}} <span id="time">3</span>秒后跳回主页</h2>
         </div>
     </div>
 </div>
